@@ -1,6 +1,12 @@
 # ChangeLog for sys-auth/nss-pam-ldapd
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-auth/nss-pam-ldapd/ChangeLog,v 1.1 2012/07/24 07:16:14 prometheanfire Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-auth/nss-pam-ldapd/ChangeLog,v 1.2 2012/07/24 21:32:13 prometheanfire Exp $
+
+*nss-pam-ldapd-0.8.10-r1 (24 Jul 2012)
+
+  24 Jul 2012; Matthew Thode <prometheanfire@gentoo.org>
+  -nss-pam-ldapd-0.8.10.ebuild, +nss-pam-ldapd-0.8.10-r1.ebuild:
+  revbump for pam_ldap conflict
 
 *nss-pam-ldapd-0.8.10 (24 Jul 2012)
 *nss-pam-ldapd-0.6.7-r1 (24 Jul 2012)
